--- a/style.css
+++ b/style.css
@@ -267,6 +267,31 @@ button:hover {
   position: absolute;
   left: 140px;
 }
+.hidden {
+  display: none;
+}
+
+.btn-box {
+  margin-top: 20px;
+  position: relative;
+  height: 120px;
+}
+
+#yesBtn {
+  padding: 12px 25px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+#noBtn {
+  padding: 12px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  position: absolute;
+  transition: 0.2s;
+}
+
+
 
 
 
